[tool.poetry]
name = "zaws_wrapper"
version = "1.0.0"
description = ""
authors = ["Josh Orr <joshj@orr.blue>"]

[[tool.poetry.source]]
url = "https://pypi.fury.io/zerapix"
name = "fury"

[tool.poetry.dependencies]
python = "~3.9"
pip = "*"
zaws = {version=">=1.1.1", source="fury"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target_version = ['py39']
skip-string-normalization = 1
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''
