[tool.poetry]
name = "zaws_wrapper"
version = "1.0.0"
description = ""
authors = ["Josh Orr <joshj@orr.blue>"]

[[tool.poetry.source]]
name = "fury"
url = "https://pypi.fury.io/zerapix"
priority = "explicit"

[[tool.poetry.source]]
name = "PyPI"
priority = "default"

[tool.poetry.dependencies]
python = "~3.9"
pip = "*"
zaws = {version=">=1.1.1", source="fury"}
zlogging = {source="fury", version="^1.4.0"}
zsetup = {source="fury", version="^1.6.0"}

[tool.poetry.scripts]
# command_name = module_for_handler : function_for_handler
zaws = 'zaws_wrapper:wrapper_main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target_version = ['py39']
skip-string-normalization = 1
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''
